--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 .home-page {
   font-family: GlacialIndifference;
   /* background: linear-gradient(135deg, #71b7e6, #9b59b6); */
-  background-image: url('https://th.bing.com/th/id/R.3ed22d3b73876672ffc037e6a99562eb?rik=foEb1%2bTFdmzm9w&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f11%2fFlat-Design-Wallpapers-HD.png&ehk=i%2fLteHo%2bfNLS12%2fGghfPdxd6HJ8J0UaHN5R%2fvhg5SnA%3d&risl=&pid=ImgRaw&r=0');
+  background-image: url('../images/background-image.png');
   width: 100%;
   height: 100%;
   padding-bottom: 80px;
