--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .home-page {
   font-family: GlacialIndifference;
   /* background: linear-gradient(135deg, #71b7e6, #9b59b6); */
-  background-image: url('../images/background-image.png');
+  background-image: url('../../images/background-image.png');
   width: 100%;
   height: 100%;
   padding-bottom: 80px;
@@ -101,31 +101,31 @@
 }
 
 .home-carousel .banner1 {
-  background-image: url("../images/banner1.jpg");
+  background-image: url("../../images/banner1.jpg");
   width: 70%;
   height: 275px;
 }
 
 .home-carousel .banner2 {
-  background-image: url("../images/banner2.jpeg");
+  background-image: url("../../images/banner2.jpeg");
   width: 70%;
   height: 275px;
 }
 
 .home-carousel .banner3 {
-  background-image: url("../images/banner3.jpeg");
+  background-image: url("../../images/banner3.jpeg");
   width: 70%;
   height: 275px;
 }
 
 .home-carousel .banner4 {
-  background-image: url("../images/banner4.jpeg");
+  background-image: url("../../images/banner4.jpeg");
   width: 70%;
   height: 275px;
 }
 
 .home-carousel .banner5 {
-  background-image: url("../images/banner5.jpeg");
+  background-image: url("../../images/banner5.jpeg");
   width: 70%;
   height: 275px;
 }
