--- a/src/pages/RegistrationForm/RegistrationForm.css
+++ b/src/pages/RegistrationForm/RegistrationForm.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+ @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 .container * {
   margin: 0;
@@ -94,7 +94,7 @@ form .button input {
   cursor: pointer;
   transition: all 0.3s ease;
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
-} */
+} 
 
 /* form .button input:hover { */
   /* transform: scale(0.99); */
