--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,11 +1,19 @@
 .home-page {
   font-family: GlacialIndifference;
   /* background: linear-gradient(135deg, #71b7e6, #9b59b6); */
-  background-image: url('../../images/background-image.png');
+  background-image: url("../../images/background-image.png");
   width: 100%;
   height: 100%;
   padding-bottom: 80px;
   background-size: cover;
+}
+
+.home-page .home-page-title {
+  font-size: 40px;
+  font-weight: 500;
+  position: relative;
+  color: #294c7c;
+  font-family: "GlacialIndifferenceBold";
 }
 
 .home-page-inner-container {
@@ -38,7 +46,8 @@
 }
 
 .home-page-input {
-  height: 45px;  width: 400px;
+  height: 45px;
+  width: 400px;
   outline: none;
   border-radius: 5px;
   border: 1px solid #ccc;
@@ -107,30 +116,30 @@
   align-content: center;
 }
 
-    .home-carousel .banner2 {
-        background-image: url("../../images/banner2.jpeg");
-        width: 70%;
-        height: 275px;
-        align-content: center;
-    }
+.home-carousel .banner2 {
+  background-image: url("../../images/banner2.jpeg");
+  width: 70%;
+  height: 275px;
+  align-content: center;
+}
 
-    .home-carousel .banner3 {
-        background-image: url("../../images/banner3.jpeg");
-        width: 70%;
-        height: 275px;
-        align-content: center;
-    }
+.home-carousel .banner3 {
+  background-image: url("../../images/banner3.jpeg");
+  width: 70%;
+  height: 275px;
+  align-content: center;
+}
 
-    .home-carousel .banner4 {
-        background-image: url("../../images/banner4.jpeg");
-        width: 70%;
-        height: 275px;
-        align-content: center;
-    }
+.home-carousel .banner4 {
+  background-image: url("../../images/banner4.jpeg");
+  width: 70%;
+  height: 275px;
+  align-content: center;
+}
 
-    .home-carousel .banner5 {
-        background-image: url("../../images/banner5.jpeg");
-        width: 70%;
-        height: 275px;
-        align-content: center;
-    }
+.home-carousel .banner5 {
+  background-image: url("../../images/banner5.jpeg");
+  width: 70%;
+  height: 275px;
+  align-content: center;
+}
