--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -27,7 +27,8 @@
   width: 70%;
   height: auto;
   padding: 15px;
-  background-color: lightblue;
+  /* background-color: lightblue; */
+  background: transparent;
   margin: 20px;
 }
 
@@ -35,4 +36,5 @@
   font-family: GlacialIndifference;
   font-size: 30px;
   text-align: center;
+  color: #fff;
 }
