--- a/src/pages/ResetPassword/ResetPassword.css
+++ b/src/pages/ResetPassword/ResetPassword.css
@@ -14,7 +14,7 @@
 
 .reset-password-card {
   width: 100%;
-  height: 100%;
+  height: 95%;
   margin-top: 40px;
   margin-right: 100px;
   padding: 10px;
@@ -66,3 +66,17 @@
   width: 250px !important;
   margin-left: 130px;
 }
+
+.reset-password-page .error-message-div{
+  font-size: 14px;
+  color: #fff;
+  background: #c83739;
+  opacity: 0.7;
+  width: 380px;
+  margin-left: 85px;
+  margin-top: -10px;
+  padding: 2px;
+  padding-left: 15px;
+  border-radius: 5px; 
+  text-align: left !important;
+ }
