--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,6 +1,5 @@
 .home-page {
   font-family: GlacialIndifference;
-  /* background: linear-gradient(135deg, #71b7e6, #9b59b6); */
   background-image: url("../../images/background-image.png");
   width: 100%;
   height: 100%;
@@ -143,3 +142,31 @@
   height: 275px;
   align-content: center;
 }
+
+.home-page .error-message-admin-div{
+  font-size: 15px;
+  color: #fff;
+  background: #c83739;
+  opacity: 0.7;
+  width: 350px;
+  margin-left: 55px;
+  margin-top: -8px;
+  padding: 2px;
+  padding-left: 20px;
+  border-radius: 2px; 
+  text-align: left !important;
+ }
+
+ .home-page .error-message-customer-div{
+  font-size: 15px;
+  color: #fff;
+  background: #c83739;
+  opacity: 0.7;
+  width: 350px;
+  margin-left: 45px;
+  margin-top: -8px;
+  padding: 2px;
+  padding-left: 20px;
+  border-radius: 2px; 
+  text-align: left !important;
+ }
