--- a/src/pages/AfterLogin/AfterCustomerLoginPage.css
+++ b/src/pages/AfterLogin/AfterCustomerLoginPage.css
@@ -51,7 +51,7 @@
 .after-customer-login-page .customer-detail-col{
   padding-top: 60px;
   min-width: 1800px;
-  padding-left: 150px;
+  padding-left: 400px;
 }
 
 .after-customer-login-page .customer-detail-card {
@@ -105,7 +105,7 @@
   border-bottom-width: 2px;
   transition: all 0.3s ease;
   font-weight: 500;
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 .after-customer-login-page .customer-detail-menu-button{
@@ -126,5 +126,8 @@
 .after-customer-login-page span{
   margin-right: 40px;
   text-align: left !important;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
 }
 
