--- a/src/pages/AfterLogin/AfterAdminLoginPage.css
+++ b/src/pages/AfterLogin/AfterAdminLoginPage.css
@@ -5,6 +5,6 @@
     height: 100%;
     min-height: 100vh;
     padding-bottom: 10px;
-    /* padding-top: 80px; */
+    padding-top: 5px;
     background-size: cover;
   }
