delete button in after admin login

--- a/src/pages/AfterLogin/AfterAdminLoginBackup.css
+++ b/src/pages/AfterLogin/AfterAdminLoginBackup.css
@@ -11,7 +11,7 @@
 
 .after-admin-login-page .after-admin-login-input {
   height: 45px;
-  width: 390px;
+  width: 280px;
   outline: none;
   border-radius: 5px;
   border: 1px solid #ccc;
@@ -28,10 +28,10 @@
   padding: 10px;
 }
 
-.after-admin-login-page .user-details--tile-div {
+/* .after-admin-login-page .user-details--tile-div {
   text-align: "center";
   justify-content: "space-between";
-}
+} */
 
 .after-admin-login-page span {
   height: 45px;
@@ -62,26 +62,6 @@
 .after-admin-login-page .delete-button:hover {
   background: #9b59b6;
 }
-
-/* .after-admin-login-page .edit-button {
-  height: 45px;
-  width: 5%;
-  margin-top: -2px;
-  margin-left: 40px !important;
-  outline: none;
-  color: #fff;
-  border: none;
-  font-size: 16px;
-  background: #71b7e6;
-  font-weight: 700;
-  letter-spacing: 1px;
-  border-radius: 5px;
-  margin-left: -15px;
-}
-
-.after-admin-login-page .edit-button:hover {
-  background: #9b59b6;
-} */
 
 .after-admin-login-page .logout-button {
   height: 45px;
