--- a/src/pages/AfterLogin/AfterAdminLoginBackup.css
+++ b/src/pages/AfterLogin/AfterAdminLoginBackup.css
@@ -11,7 +11,7 @@
 
 .after-admin-login-page .after-admin-login-input {
   height: 45px;
-  width: 280px;
+  width: 290px;
   outline: none;
   border-radius: 5px;
   border: 1px solid #ccc;
@@ -39,15 +39,15 @@
   outline: none;
   color: #fff;
   font-size: 30px;
-  margin-left: -60px;
-  margin-right: 200px;
+  margin-left: -105px;
+  margin-right: 230px;
 }
 
 .after-admin-login-page .delete-button {
   height: 45px;
   width: 6%;
   margin-top: -2px;
-  margin-left: 40px !important;
+  margin-left: 20px !important;
   outline: none;
   color: #fff;
   border: none;
@@ -56,7 +56,6 @@
   font-weight: 700;
   letter-spacing: 1px;
   border-radius: 5px;
-  margin-left: -15px;
 }
 
 .after-admin-login-page .delete-button:hover {
@@ -75,7 +74,7 @@
   font-weight: 700;
   letter-spacing: 1px;
   border-radius: 5px;
-  margin-left: 102rem;
+  margin-left: 100rem;
 }
 
 .after-admin-login-page .logout-button:hover {
@@ -92,4 +91,53 @@
   position: relative;
   color: #fff;
   font-family: "GlacialIndifferenceBold";
+}
+
+.after-admin-login-page .edit-button {
+  height: 45px;
+  width: 6%;
+  margin-top: -2px;
+  margin-left: 20px !important;
+  outline: none;
+  color: #fff;
+  border: none;
+  font-size: 16px;
+  background: #71b7e6;
+  font-weight: 700;
+  letter-spacing: 1px;
+  border-radius: 5px;
+  margin-right: 15px;
+}
+
+.after-admin-login-page .edit-button:hover {
+  background: #9b59b6;
+}
+
+.after-admin-login-page .user-details-title-div span {
+  height: 45px;
+  width: 400px;
+  outline: none;
+  color: #fff;
+  font-size: 30px;
+  margin-left: 5px;
+  margin-right: 155px;
+}
+
+.after-admin-login-page .submit-details-button {
+  height: 45px;
+  width: 10%;
+  margin-top: 15px;
+  margin-left: 20px !important;
+  outline: none;
+  color: #fff;
+  border: none;
+  font-size: 18px;
+  background: #71b7e6;
+  font-weight: 700;
+  letter-spacing: 1px;
+  border-radius: 5px;
+}
+
+.after-admin-login-page .submit-details-button:hover {
+  background: #9b59b6;
 }
